# vstring

./: .clang-format  CMakeLists.txt  README.md
include/: vstring.hpp  vstrlen.hpp
include/tests/: vstring_strlen_bench.hpp  vstring_strlen_test.hpp
src/: vstring_bench.cpp  vstring_test.cpp
